Add first attempt of federated learning

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -18,14 +18,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "238a508c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from collections import defaultdict"
+    "import threading\n",
+    "from collections import defaultdict\n",
+    "import torch\n",
+    "from torch.utils.data import Dataset\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import torch.optim as optim\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "import flwr as fl\n",
+    "from PIL import Image\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -50,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ed7bff12",
    "metadata": {},
    "outputs": [
@@ -132,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "d2d18bc1",
    "metadata": {},
    "outputs": [],
@@ -190,6 +200,13 @@
     "        \"Hospital_D_Rural\": df[df[\"patient_id\"].isin(hospital_d_patients)]\n",
     "    }\n",
     "\n",
+    "    df[\"hospital_id\"] = 0\n",
+    "    df.loc[df[\"patient_id\"].isin(hospital_a_patients), \"hospital_id\"] = 1\n",
+    "    df.loc[df[\"patient_id\"].isin(hospital_b_patients), \"hospital_id\"] = 2\n",
+    "    df.loc[df[\"patient_id\"].isin(hospital_c_patients), \"hospital_id\"] = 3\n",
+    "    df.loc[df[\"patient_id\"].isin(hospital_d_patients), \"hospital_id\"] = 4\n",
+    "    df.to_csv(csv_path, index=False)\n",
+    "\n",
     "    # --- Print summaries ---\n",
     "    print(\"\\n=== Hospital Summary ===\")\n",
     "    for name, hdf in hospitals.items():\n",
@@ -206,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "be686450",
    "metadata": {},
    "outputs": [
@@ -246,32 +263,360 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "82bc2bf0",
+   "cell_type": "markdown",
+   "id": "997c9e05",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'hospital_a_patients' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[30], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m total_assigned_patients \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28mset\u001b[39m()\u001b[38;5;241m.\u001b[39munion(\n\u001b[0;32m----> 3\u001b[0m         \u001b[43mhospital_a_patients\u001b[49m, hospital_b_patients,\n\u001b[1;32m      4\u001b[0m         hospital_c_patients, hospital_d_patients\n\u001b[1;32m      5\u001b[0m     )\n\u001b[1;32m      6\u001b[0m )\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'hospital_a_patients' is not defined"
-     ]
-    }
-   ],
-   "source": []
+   "source": [
+    "4. Write the model to train"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "82bc2bf0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SmallCNN(nn.Module):\n",
+    "    def __init__(self, num_classes=2):\n",
+    "        super(SmallCNN, self).__init__()\n",
+    "\n",
+    "        self.features = nn.Sequential(\n",
+    "            nn.Conv2d(3, 32, kernel_size=3, padding=1),  # input 3x256x256\n",
+    "            nn.BatchNorm2d(32),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.MaxPool2d(2),  # 32x128x128\n",
+    "\n",
+    "            nn.Conv2d(32, 64, kernel_size=3, padding=1),\n",
+    "            nn.BatchNorm2d(64),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.MaxPool2d(2),  # 64x64x64\n",
+    "\n",
+    "            nn.Conv2d(64, 128, kernel_size=3, padding=1),\n",
+    "            nn.BatchNorm2d(128),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.MaxPool2d(2),  # 128x32x32\n",
+    "\n",
+    "            nn.Conv2d(128, 256, kernel_size=3, padding=1),\n",
+    "            nn.BatchNorm2d(256),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.MaxPool2d(2)   # 256x16x16\n",
+    "        )\n",
+    "\n",
+    "        self.classifier = nn.Sequential(\n",
+    "            nn.Flatten(),\n",
+    "            nn.Linear(256*16*16, 512),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.Dropout(0.5),\n",
+    "            nn.Linear(512, num_classes)\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.features(x)\n",
+    "        x = self.classifier(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39e248f8",
+   "metadata": {},
+   "source": [
+    "5. Create the Federated Learning set-up"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f93e81c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cuda\n"
+     ]
+    }
+   ],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(\"Using device:\", device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8a29ce7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SkinLesionDataset(Dataset):\n",
+    "    def __init__(self, df, dir_path='../train/'):\n",
+    "        self.df = df.reset_index(drop=True)\n",
+    "        self.dir_path = dir_path\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.df)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        row = self.df.iloc[idx]\n",
+    "        path = self.dir_path + row['image_name'] + \".jpg\"\n",
+    "        img = Image.open(path).convert(\"RGB\")\n",
+    "        img = np.array(img) / 255.0\n",
+    "        img = torch.tensor(img.transpose(2,0,1), dtype=torch.float32)\n",
+    "        label = 0 if row['benign_malignant'] == 'benign' else 1\n",
+    "        return img, label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "20dbdb4f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dir_path = '../train/'\n",
+    "\n",
+    "def load_client_dataset(csv_path, hospital_id, dir_path='../train/'):\n",
+    "    df = pd.read_csv(csv_path)\n",
+    "    client_df = df[df[\"hospital_id\"] == hospital_id]\n",
+    "    if client_df.empty:\n",
+    "        return None, None\n",
+    "\n",
+    "    # Optional: split into train/val\n",
+    "    from sklearn.model_selection import train_test_split\n",
+    "    train_df, val_df = train_test_split(client_df, test_size=0.2, random_state=42, stratify=client_df['benign_malignant'])\n",
+    "\n",
+    "    train_dataset = SkinLesionDataset(train_df, dir_path)\n",
+    "    val_dataset = SkinLesionDataset(val_df, dir_path)\n",
+    "    return train_dataset, val_dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "cac5db31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"labels/ISIC_2020_Training_GroundTruth.csv\")\n",
+    "hospital_ids = df[\"hospital_id\"].unique()\n",
+    "\n",
+    "clients_train_data = []\n",
+    "clients_test_data = []\n",
+    "\n",
+    "for hid in hospital_ids:\n",
+    "    train_ds, val_ds = load_client_dataset(\"labels/ISIC_2020_Training_GroundTruth.csv\", hospital_id=hid)\n",
+    "    if train_ds is None:\n",
+    "        continue\n",
+    "    clients_train_data.append(train_ds)\n",
+    "    clients_test_data.append(val_ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "96a8960b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_fn(model, trainloader, epochs, lr, device):\n",
+    "    model.train()\n",
+    "    criterion = nn.CrossEntropyLoss()\n",
+    "    optimizer = optim.Adam(model.parameters(), lr=lr)\n",
+    "    for _ in range(epochs):\n",
+    "        for X_batch, y_batch in trainloader:\n",
+    "            X_batch, y_batch = X_batch.to(device), y_batch.to(device)\n",
+    "            optimizer.zero_grad()\n",
+    "            outputs = model(X_batch)\n",
+    "            loss = criterion(outputs, y_batch)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "    return loss.item()\n",
+    "\n",
+    "def test_fn(model, testloader, device):\n",
+    "    model.eval()\n",
+    "    criterion = nn.CrossEntropyLoss()\n",
+    "    correct, total, loss_total = 0, 0, 0\n",
+    "    with torch.no_grad():\n",
+    "        for X_batch, y_batch in testloader:\n",
+    "            X_batch, y_batch = X_batch.to(device), y_batch.to(device)\n",
+    "            outputs = model(X_batch)\n",
+    "            loss = criterion(outputs, y_batch)\n",
+    "            loss_total += loss.item() * len(y_batch)\n",
+    "            preds = outputs.argmax(dim=1)\n",
+    "            correct += (preds == y_batch).sum().item()\n",
+    "            total += len(y_batch)\n",
+    "    return loss_total / total, correct / total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a733040d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FlowerClient(fl.client.NumPyClient):\n",
+    "    def __init__(self, model, train_dataset, test_dataset, device):\n",
+    "        self.model = model\n",
+    "        self.trainloader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
+    "        self.testloader = DataLoader(test_dataset, batch_size=32)\n",
+    "        self.device = device\n",
+    "\n",
+    "    def get_parameters(self):\n",
+    "        return [val.cpu().numpy() for val in self.model.state_dict().values()]\n",
+    "\n",
+    "    def set_parameters(self, parameters):\n",
+    "        state_dict = {k: torch.tensor(v) for k, v in zip(self.model.state_dict().keys(), parameters)}\n",
+    "        self.model.load_state_dict(state_dict)\n",
+    "\n",
+    "    def fit(self, parameters, config):\n",
+    "        self.set_parameters(parameters)\n",
+    "        train_fn(self.model, self.trainloader, epochs=config[\"local_epochs\"], lr=config[\"lr\"], device=self.device)\n",
+    "        return self.get_parameters(), len(self.trainloader.dataset), {}\n",
+    "\n",
+    "    def evaluate(self, parameters, config):\n",
+    "        self.set_parameters(parameters)\n",
+    "        loss, accuracy = test_fn(self.model, self.testloader, self.device)\n",
+    "        return float(loss), len(self.testloader.dataset), {\"accuracy\": float(accuracy)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4ee18770",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strategy = fl.server.strategy.FedAvg(\n",
+    "    fraction_fit=1.0,\n",
+    "    min_fit_clients=4,\n",
+    "    min_available_clients=4,\n",
+    ")\n",
+    "\n",
+    "def start_flower_server():\n",
+    "    fl.server.start_server(\n",
+    "        server_address=\"localhost:8080\",\n",
+    "        config=fl.server.ServerConfig(num_rounds=5),\n",
+    "        strategy=strategy\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "02698bd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clients = []\n",
+    "for i in range(4):\n",
+    "    model = SmallCNN().to(device)\n",
+    "    clients.append(FlowerClient(model, clients_train_data[i], clients_test_data[i], device))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "1e5e849d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[93mWARNING \u001b[0m:   DEPRECATED FEATURE: flwr.server.start_server() is deprecated.\n",
+      "\tInstead, use the `flower-superlink` CLI command to start a SuperLink as shown below:\n",
+      "\n",
+      "\t\t$ flower-superlink --insecure\n",
+      "\n",
+      "\tTo view usage and all available options, run:\n",
+      "\n",
+      "\t\t$ flower-superlink --help\n",
+      "\n",
+      "\tUsing `start_server()` is deprecated.\n",
+      "\n",
+      "            This is a deprecated feature. It will be removed\n",
+      "            entirely in future versions of Flower.\n",
+      "        \n",
+      "Exception in thread Thread-7 (start_client):\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.10/threading.py\", line 1016, in _bootstrap_inner\n",
+      "Exception in thread Thread-8 (start_client):\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.10/threading.py\", line 1016, in _bootstrap_inner\n",
+      "Exception in thread Thread-9 (start_client):\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.10/threading.py\", line 1016, in _bootstrap_inner\n",
+      "Exception in thread Thread-10 (start_client):\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.10/threading.py\", line 1016, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/usr/lib/python3.10/threading.py\", line 953, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/tmp/ipykernel_12611/1198316077.py\", line 7, in start_client\n",
+      "    self.run()\n",
+      "  File \"/usr/lib/python3.10/threading.py\", line 953, in run\n",
+      "    self.run()\n",
+      "  File \"/usr/lib/python3.10/threading.py\", line 953, in run\n",
+      "    self.run()\n",
+      "  File \"/usr/lib/python3.10/threading.py\", line 953, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/tmp/ipykernel_12611/1198316077.py\", line 7, in start_client\n",
+      "\u001b[92mINFO \u001b[0m:      Starting Flower server, config: num_rounds=5, no round_timeout\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/tmp/ipykernel_12611/1198316077.py\", line 7, in start_client\n",
+      "TypeError: start_numpy_client() takes 0 positional arguments but 1 positional argument (and 1 keyword-only argument) were given\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/tmp/ipykernel_12611/1198316077.py\", line 7, in start_client\n",
+      "TypeError: start_numpy_client() takes 0 positional arguments but 1 positional argument (and 1 keyword-only argument) were given\n",
+      "TypeError: start_numpy_client() takes 0 positional arguments but 1 positional argument (and 1 keyword-only argument) were given\n",
+      "TypeError: start_numpy_client() takes 0 positional arguments but 1 positional argument (and 1 keyword-only argument) were given\n",
+      "\u001b[92mINFO \u001b[0m:      Flower ECE: gRPC server running (5 rounds), SSL is disabled\n",
+      "Exception in thread Thread-6 (start_flower_server):\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.10/threading.py\", line 1016, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/usr/lib/python3.10/threading.py\", line 953, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/tmp/ipykernel_12611/836498797.py\", line 8, in start_flower_server\n",
+      "  File \"/home/andrei/facultate/an2/aitdm/trustworthy-federated-skin-lesion/venv/lib/python3.10/site-packages/flwr/compat/server/app.py\", line 157, in start_server\n",
+      "    register_signal_handlers(\n",
+      "  File \"/home/andrei/facultate/an2/aitdm/trustworthy-federated-skin-lesion/venv/lib/python3.10/site-packages/flwr/common/exit/signal_handler.py\", line 101, in register_signal_handlers\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "    default_handler = signal.signal(sig, graceful_exit_handler)  # type: ignore\n",
+      "  File \"/usr/lib/python3.10/signal.py\", line 56, in signal\n",
+      "    handler = _signal.signal(_enum_to_int(signalnum), _enum_to_int(handler))\n",
+      "ValueError: signal only works in main thread of the main interpreter\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Start the server in a background thread ---\n",
+    "server_thread = threading.Thread(target=start_flower_server, daemon=True)\n",
+    "server_thread.start()\n",
+    "\n",
+    "# --- Start clients ---\n",
+    "def start_client(client_obj):\n",
+    "    fl.client.start_numpy_client(\"localhost:8080\", client=client_obj)\n",
+    "\n",
+    "client_threads = []\n",
+    "for client_obj in clients:  # your FlowerClient instances\n",
+    "    t = threading.Thread(target=start_client, args=(client_obj,))\n",
+    "    t.start()\n",
+    "    client_threads.append(t)\n",
+    "\n",
+    "# Optional: wait for clients to finish\n",
+    "for t in client_threads:\n",
+    "    t.join()"
+   ]
   }
  ],
  "metadata": {
